deployment_scripts/kube_manifest/backend_deployment.yml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-backend
  namespace: movie-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-backend
  template:
    metadata:
      labels:
        app: movie-backend
    spec:
      containers:
        - name: movie-backend
          image: sathishselvan/movie-backend:v0.8
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media-volume
              mountPath: /moveibackend/media
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: media-volume
          hostPath:
            path: /mnt/media
            type: Directory
