deployment_scripts/kube_manifest/apps_ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-ingress
  namespace: movie-app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: movie.app.local
      http:
        paths:
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: movie-backend-service
                port:
                  number: 80
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: movie-backend-service
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: movie-backend-service
                port:
                  number: 80
          - path: /ai/
            pathType: Prefix
            backend:
              service:
                name: movie-recommend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-frontend-service
                port:
                  number: 80
    
    
    - http:
        paths:
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: movie-backend-service
                port:
                  number: 80
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: movie-backend-service
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: movie-backend-service
                port:
                  number: 80
          - path: /ai/
            pathType: Prefix
            backend:
              service:
                name: movie-recommend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-frontend-service
                port:
                  number: 80

    

    - host: pf72lmlw-8080.inc1.devtunnels.ms
      http:
        paths:
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: movie-backend-service
                port:
                  number: 80
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: movie-backend-service
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: movie-backend-service
                port:
                  number: 80
          - path: /ai/
            pathType: Prefix
            backend:
              service:
                name: movie-recommend-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-frontend-service
                port:
                  number: 80
